[gd_scene load_steps=4 format=3 uid="uid://cch2g4nm34cma"]

[ext_resource type="Script" path="res://Scripts/ticTacToe.gd" id="1_ahxvd"]
[ext_resource type="PackedScene" uid="uid://d3cwpywine331" path="res://Scenes/cell.tscn" id="2_6l5bb"]
[ext_resource type="Texture2D" uid="uid://dhkfjvy0ymv7o" path="res://assets/X-22.png" id="3_u5ogt"]

[node name="TicTacToe" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahxvd")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_right = 154.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "TIC TAC TOE"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -154.0
offset_right = 154.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer_TicTacToe" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="cell1" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2

[node name="cell2" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2

[node name="cell3" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2

[node name="cell4" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2

[node name="cell5" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2

[node name="cell6" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2

[node name="cell7" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2

[node name="cell8" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2

[node name="cell9" parent="VBoxContainer/GridContainer_TicTacToe" instance=ExtResource("2_6l5bb")]
layout_mode = 2
metadata/tile = 8

[node name="VBoxContainer_infoBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label_turn" type="Label" parent="VBoxContainer/VBoxContainer_infoBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Juega:
"

[node name="TextureRect_currentPlayer" type="TextureRect" parent="VBoxContainer/VBoxContainer_infoBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_u5ogt")
expand_mode = 2
stretch_mode = 4

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer_infoBox"]
layout_mode = 2
text = "Reiniciar"

[node name="Button_return" type="Button" parent="VBoxContainer/VBoxContainer_infoBox"]
layout_mode = 2
text = "Menu"

[connection signal="cell_pressed_signal" from="VBoxContainer/GridContainer_TicTacToe/cell1" to="VBoxContainer/GridContainer_TicTacToe/cell2" method="_on_cell_1_cell_pressed_signal"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_infoBox/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_infoBox/Button_return" to="." method="_on_button_return_pressed"]
